@@ -159,8 +159,8 @@
   "ability.message.no_target": "No target found",
   "ability.message.reiatsu_target": "The target has too much reiatsu presssure to be affected!",
 
-  "gui.chain_faith.string": "Chain of faith: ",
-  "gui.chain_faith.tooltip": "Chain that binds your soul to your body, if the timer is up it'll transform you in a hollow",
+  "gui.chain_fate.string": "Chain of fate: ",
+  "gui.chain_fate.tooltip": "Chain that binds your soul to your body, if the timer is up it'll transform you in a hollow",
 
   "gui.zanjutsu.string": "Zanjutsu: ",
   "gui.zanjutsu.tooltip": "How strong a shinigami is with a blade, has an impact on damage with your sword and certain abilities.",
